    [Phil Evans] 

  o FEATURE: Move waters to surround protein [Garib Murshudov]

  o FEATURE: rotate/translate zone by residue ranges

  o FEATURE: Rigid-body fit by residue ranges.

  o FEATURE: Multi-select on reading coordinates is enabled.

  o FEATURE: Immediate access to coordinates from CIF dictionaries
    that contain coordinates (no need for LIBCHECK in such cases).

  o CHANGE: partial charges added to electrostatic surface calculation.

  o CHANGE: shift-click and ctrl-click in the file selectors now work
    for reading in several coordinates files [Roberto Steiner].

  o CHANGE: SEGIDs are more intelligently inherited [Steven Sheriff,
    Bob Nolte]
 
  o CHANGE: Transformed make take the cell and symmetry of the
   reference coordinates.

  o CHANGE: Transformed maps take on the cell and spacegroup of the
    reference coordinates.

  o CHANGE: Coordinates Molecules transformed by LSQ take on the cell
    and spacegroup of the reference coordinates.

  o CHANGE: Pukka-puckers? fixed and re-enabled.

  o CHANGE: Ramachandran Plots now have molecule name labels [Wendy Offen].

  o CHANGE: The save coordinates dialogs active item is the first
    molecule with unsaved changes (rather than simply the first
    molecule) [Herb Klei]

  o CHANGE: "Go To Blob" now goes to the front blob, no matter what
    the density level of blobs/density behind it is [JED].

  o CHANGE: Don't display the geometry distance if the molecule
    corresponding to the start or end point is not displayed [JED].

  o CHANGE: Using the internal alignment, the weights of the affine
    gap penalty have been changed to favour mutations and larger gaps
    rather than several small gaps.

  o CHANGE: the restraints editor now uses strings
    (positive/negative/both) rather than number to represent the sign
    for chiral volumes [Andrew Leslie]

  o CHANGE: Additional representations now have an "All off" button.
